<resources>
    <string name="app_name">InstagramClone</string>
    <string name="instagram_logo">Instagram_Logo</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="like">Like</string>
    <string name="_0">0</string>
    <string name="description">description</string>
    <string name="reels">Reels</string>
    <string name="feed">Feed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>